# deeplearning

./: .gitignore  deeplearning.files
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/feature_recon/: BodyPartElm.h  Person.h  Persons.h
devel/lib/pkgconfig/: feature_recon.pc
devel/lib/python2.7/dist-packages/feature_recon/msg/: _BodyPartElm.py  _Person.py  _Persons.py
devel/share/common-lisp/ros/feature_recon/msg/: BodyPartElm.lisp  Person.lisp  Persons.lisp  _package.lisp  _package_BodyPartElm.lisp  _package_Person.lisp  _package_Persons.lisp  feature_recon-msg.asd
devel/share/feature_recon/cmake/: feature_recon-msg-extras.cmake  feature_recon-msg-paths.cmake  feature_reconConfig.cmake
devel/share/gennodejs/ros/feature_recon/msg/: BodyPartElm.js  Person.js  Persons.js  _index.js
devel/share/roseus/ros/feature_recon/: manifest.l
devel/share/roseus/ros/feature_recon/msg/: BodyPartElm.l  Person.l  Persons.l
src/feature_recon/: CMakeLists.txt  package.xml  setup.py
src/feature_recon/launch/: feature_recon.launch
src/feature_recon/msg/: Person.msg
src/feature_recon/scripts/: broadcaster_ros.py  knownFaceLoader.py
src/feature_recon/src/: Person.cpp  Person.h  Persons.cpp  Persons.h  data_handler.h  feature_recon.cpp  human_structs.h
src/feature_recon/src/feature_extractor/: feature_extractor.cpp  feature_extractor.h
src/feature_recon/src/human_data/: human_1.txt  human_12.txt  human_2.txt  human_alex.txt  human_christian.txt
